Fixed the blurriness of canvas

--- a/src/App/components/Workspace/Workspace.css
+++ b/src/App/components/Workspace/Workspace.css
@@ -5,5 +5,6 @@
 }
 
 .canvas {
-    flex: 1;
+    width: 100%;
+    height: 100%;
 }
